--- a/src/components/Reaction.module.css
+++ b/src/components/Reaction.module.css
@@ -2,6 +2,7 @@
   z-index: 10;
   background-color: rgb(27, 26, 26);
   display: flex;
+  align-items: center;
   padding: 0.5rem 1rem;
   border-radius: 8px;
   height: 50px;
@@ -12,6 +13,21 @@
   color: white;
   margin-right: 8px;
   border: none;
+}
+
+.reactionInputInitial {
+  background-color: rgb(27, 26, 26);
+  color: white;
+  font-weight: bold;
+  margin-right: 16px;
+  text-transform: uppercase;
+  border: 1px solid white;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .reactionButton {
@@ -39,4 +55,8 @@
   padding: 0.5rem 1rem;
   cursor: pointer;
   text-transform: uppercase;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
